bugfix #1: prep for fixing imageList overflow

--- a/exifstore/src/components/Gallery/ImageList/ImageList.module.css
+++ b/exifstore/src/components/Gallery/ImageList/ImageList.module.css
@@ -3,20 +3,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   background-color: aliceblue;
 }
 .imageListWrapper {
   width: 100%;
+  height: 92.275%;
   display: flex;
   justify-content: center;
-  margin-bottom: 2rem;
+  align-items: center;
 }
 .imageListActionBox {
+  flex-grow: 1;
   width: 100%;
   flex-direction: row;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
   position: relative;
 }
